--- a/style.css
+++ b/style.css
@@ -42,8 +42,18 @@
     text-decoration: none;
     font-weight: 600;
     transition: opacity 0.3s;
+    transition: transform 0.3s ease, opacity 0.3s ease; /* smooth effect */
+  display: inline-block; /* important for transform */
   }
-  .navbar a:hover { opacity: 0.8; }
+  .navbar a:hover { opacity: 0.8;
+   color: rgb(255, 153, 0);
+   transform: scale(1.2); /* 1.2 = 20% zoom */
+   text-decoration: underline; /* underline */
+
+   text-underline-offset: 5px; /* thoda niche underline lagega */
+
+
+  }
   
   #theme-toggle {
     margin-left: 20px;
